# scratch-pdf-bot

./: README.md  main.py  pyproject.toml
gpt_pdf_bot/: bot.py  ingest.py  shared.py  types.py
